--- a/action.yml
+++ b/action.yml
@@ -2,10 +2,15 @@ name: 'Your name here'
 description: 'Provide a description here'
 author: 'Your name or organization here'
 inputs:
-  milliseconds: # change this
+  rust-channel:
+    description: The channel to install
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  components:
+    description: The components to install
+    required: false
+  targets:
+    description: The targets to install
+    required: false
 runs:
   using: 'node16'
   main: 'dist/index.js'
