--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.3.2",
+    "eslint-plugin-jest": "^27.1.5",
     "js-yaml": "^4.1.0",
     "prettier": "2.5.1",
     "typescript": "^4.4.4"
